--- a/.config/hypr/hyprland/general.conf
+++ b/.config/hypr/hyprland/general.conf
@@ -1,5 +1,6 @@
 # MONITOR CONFIG
-monitor=,preferred,auto,1.6
+monitor=eDP-1,preferred,auto,1.6
+monitor=,preferred,auto,1.6,mirror,eDP-1
 # monitor=,addreserved, 0, 0, 0, 0 # Custom reserved area
 
 # HDMI port: mirror display. To see device name, use `hyprctl monitors`
@@ -163,6 +164,7 @@ cursor {
     zoom_factor = 1
     zoom_rigid = false
     hotspot_padding = 1
+    inactive_timeout = 1
 }
 
 # Overview
