--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,7 +9,7 @@ submap = global # This is required for catchall to work
 source=hyprland/env.conf
 source=hyprland/execs.conf
 source=hyprland/general.conf
-source=hyprland/rules.conf
+# source=hyprland/rules.conf
 source=hyprland/colors.conf
 source=hyprland/keybinds.conf
 
@@ -17,7 +17,7 @@ source=hyprland/keybinds.conf
 source=custom/env.conf
 source=custom/execs.conf
 source=custom/general.conf
-source=custom/rules.conf
+# source=custom/rules.conf
 source=custom/keybinds.conf
 
 # nwg-displays support
