change shell from fish to zsh

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -14,8 +14,8 @@ cursor_shape beam
 # No stupid close confirmation
 # confirm_os_window_close 0
 
-# Use fish shell
-shell fish
+# Use zsh shell
+shell zsh
 
 # Copy
 map ctrl+c    copy_or_interrupt
