add toggle fit keybind

--- a/.config/hypr/hyprland/keybinds.conf
+++ b/.config/hypr/hyprland/keybinds.conf
@@ -306,3 +306,4 @@ binde = Super, Apostrophe, layoutmsg, colresize +0.1
 
 bind = Super, F, layoutmsg, colresize 1 # Maximize
 bind = Super, Z, layoutmsg, colresize 0.5
+bind = Super, X, layoutmsg, togglefit
